# irc_server

./: CMakeLists.txt  main.cpp
auth/: ca.crt  ca.key  server.crt  server.key
src/: Server.cpp  Server.h  Session.cpp  Session.h  utils.h
